Changes in @NEW@:
  o Build changes:
    * PythonSetup synopsis now mentions the setupName keyword
      argument. (CNY-2360)
    * The conary.1 manual page now documents the purpose of the
      /etc/conary/components directory. (CNY-2361)
    * The clearBuildReqs() function now has a synonym called
      clearBuildRequires() and the clearCrossReqs() function now has a
      synonym called clearCrossRequires().  The old function names
      will be deprecated in the future. (CNY-834)
  o Bug Fixes:
    * when building groups, r.addCopy now respects the groupName
      flag. (CNY-2345)
    * the searchPath parameter to groups now works when it contains
      packages (before it only worked with labels). (CNY-2372)

Changes in 1.2.10:
  o Client Changes:
    * The 'conary verify' command no longer complains about files which
      have been removed with 'conary remove'. (CNY-950)
    * Local rollbacks for removals now store the original contents for
      modified config files. (CNY-2350)
    * Permission errors now list both the URL and the repository
      hostname. (CNY-2211)

  o Server Changes:
    * A new boolean server configuration option, 'serializeCommits',
      has been added to explicitly limit contention in certain cases.
      Successfully enabling it requires a minor schema update. (CNY-2285)
    * Servers in maintenance mode no longer return Internal Server
      Errors to GET requests from clients. (CNY-2229)

  o Build Changes:
    * The addPatch() source action honors shell-style brace and glob
      expansion when sourceDir is defined. (CNY-1152)
    * A new command, "cvc explain", has been added. "cvc explain"
      displays the documentation for recipe methods.  For example,
      "cvc explain addSource" shows the on-line documentation for the
      addSource() source action. (CNY-2242)
    * The command line interface to cvc derive (added in Conary 1.2.8)
      has been changed.  It now derives onto your buildLabel by default,