@@ -35,8 +35,8 @@ if [ ! -d "$tmpDir" ]; then
 	$1 --debug=all >> $tmpDir/submit.script 2>&1
 	conary q --full-versions --flavors --debug=all --components &> $tmpDir/conary.q
 	conary config --debug > $tmpDir/conary.config  2>&1
-	tar jcvf $tmpDir/submit.tar.bz2 /var/log/conary $tmpDir/submit.script $tmpDir/conary.config $tmpDir/conary.q > /dev/null 2>&1
-	echo "Please submit $tmpDir/submit.tar.bz2 to the rPath support team"
+	tar jcvf $tmpDir/submit.tar.bz2 /var/log/conary /var/lib/conarydb/manifest $tmpDir/submit.script $tmpDir/conary.config $tmpDir/conary.q > /dev/null 2>&1
+	echo "Please submit $tmpDir/submit.tar.bz2 to rPath at http://issues.rpath.com/"
         echo "Then, delete $tmpDir (rm -r $tmpDir)"
 else
 	echo "Please inspect and delete $tmpDir (rm -r $tmpDir)"
